Fix for bug 64 -- IDE broken in IE. IE doesn't factor scrollbars in calculating width, so the width: 100% of the suite container was covering the scrollbar. The scrolling container (id="ide") needed to be relative positioned instead of static to serve as positioning point of reference for items inside to scroll properly. Added overflow-x of none to suppress horizontal scrollbars.
git-svn-id: http://svn.getwindmill.com/trunk@358 78c7df6f-8922-0410-bcd3-9426b1ad491b

--- a/windmill/js/ide/css/remote.css
+++ b/windmill/js/ide/css/remote.css
@@ -35,10 +35,11 @@
 }
 
 #ide {
+ position: relative;
  width:100%;
- height:85%;
+ height: 85%;
  border:1px solid #aaa;
- overflow:auto; 
+ overflow: auto; overflow-y: auto; overflow-x: hidden;
 }
 
 #ideForm {
